# audio-processing

./: .gitignore  Cargo.toml  README.md
codecs/g711/: Cargo.toml
codecs/g711/benches/: encode.rs
codecs/g711/src/: alaw.rs  lib.rs  tables.rs  ulaw.rs
fft/: Cargo.toml
fft/src/: lib.rs
ns/: Cargo.toml
ns/src/: config.rs  histograms.rs  lib.rs  noise_estimator.rs  noise_suppressor.rs  prior_signal_model.rs  prior_signal_model_estimator.rs  quantile_noise_estimator.rs  signal_model.rs  signal_model_estimator.rs  speech_probability_estimator.rs  suppression_params.rs  wiener_filter.rs
ns/src/fft/: adapter.rs  fft4g.rs  mod.rs
signal/: Cargo.toml
signal/src/: lib.rs
signal/src/splitting_filter/: mod.rs
signal/src/splitting_filter/three_bands/: fixed.rs  float.rs  mod.rs
signal/src/splitting_filter/two_bands/: fixed.rs  mod.rs
util/: Cargo.toml
util/src/: lib.rs
validation/: Cargo.toml
validation/src/: main.rs
