[package]
edition = "2021"
name = "validation"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["min_const_generics"] }
ns.workspace = true
num-complex.workspace = true
rustfft = "6.1.0"
signal.workspace = true
static_assertions.workspace = true
